# CoalToolKit

./: .env.example  .replit  DEPLOYMENT.md  RAILWAY_DEPLOYMENT.md  app.py  nixpacks.toml  pyproject.toml  railway.json  render.yaml  replit.md  requirements.txt  vercel.json  wsgi.py
routes/: __init__.py  audio.py  document.py  downloader.py  image.py  main.py  utility.py  video.py
static/css/: style.css
static/js/: app.js
templates/: audio.html  base.html  document.html  downloader.html  image.html  index.html  utilities.html  video.html
utils/: common.py  config.py  ffmpeg_wrapper.py  image_wrapper.py  pandoc_wrapper.py  utility_wrapper.py  yt_dlp_wrapper.py
