[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "ffmpeg>=1.4",
    "ffmpeg-python>=0.2.0",
    "flask>=3.1.2",
    "gunicorn>=23.0.0",
    "mutagen>=1.47.0",
    "pillow>=11.3.0",
    "pypandoc>=1.15",
    "python-docx>=1.2.0",
    "qrcode>=8.2",
    "werkzeug>=3.1.3",
    "yt-dlp>=2025.9.5",
]
